--- a/index.html
+++ b/index.html
@@ -65,20 +65,7 @@
             </div>
             <a href="https://grub.hackclub.com"><button class="box-btn">check it out!</button></a>
             <a href="https://forms.hackclub.com/grubworkshop"><button class="box-btn">run a workshop!</button></a>
-        </div>
-        <div class="arrow">↓</div>
-        <div class="flow-indicator">to finish off, do...</div>
-        <div class="box" style="--box-bg: #f8b84f; --box-title: #715547; --box-desc: #000;">
-            <img class="box-img" src="./imgs/waffles.jpg" alt="Box Image" />
-            <div class="box-content">
-                <div class="box-title">Finish here: Waffles</div>
-                <div class="box-desc"><strong>Make a website that uses JavaScript, and get free waffles!</strong></div>
-                <div class="box-desc">Estimated time: 2 hours</div>
-                <div class="price-tag">$10</div>
-            </div>
-            <a href="https://waffles.hackclub.com"><button class="box-btn">check it out!</button></a>
-            <a href="https://forms.hackclub.com/waffles-workshop"><button class="box-btn">run a workshop!</button></a>
-        </div>
+        </div
     </div>
     
     <div class="fulfillment-section">
