Add 'The Zoo' to the list of workshops

--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
             <a href="https://reactive.hackclub.dev"><button class="box-btn">check it out!</button></a>
             <a href="https://forms.hackclub.com/reactive-workshop"><button class="box-btn">run a workshop!</button></a>
         </div>
+         <div class="arrow">↓</div>
+        <div class="flow-indicator">why not take a trip to the zoo and learn SvelteKit...</div>
+        <div class="box" style="--box-bg: #103D10; --box-title: #408000; --box-desc: #ffffff;">
+            <img class="box-img" src="./imgs/zoo.png" alt="Box Image" />
+            <div class="box-content">
+                <div class="box-title">The Zoo</div>
+                <div class="box-desc"><strong>Make an animal themed SvelteKit site, get plushies and stickers!</strong></div>
+                <div class="box-desc">Estimated time: 1 - 2 hours</div>
+                <div class="price-tag">$ TBC</div>
+            </div>
+            <a href="https://zoo.hackclub.com/"><button class="box-btn">check it out!</button></a>
+            <a href=""><button class="box-btn" style="background: gray;">run a workshop!</button></a>
+        </div>
     </div>
     
     <div class="fulfillment-section">
