--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="box-desc">Estimated time: 1-2 hours</div>
                 <div class="price-tag">$10+</div>
             </div>
-            <button href="https://zoo.hackclub.com" class="box-btn unreleased-btn" disabled>check it out!</button>
+            <button class="box-btn unreleased-btn" disabled>check it out!</button>
             <button class="box-btn unreleased-btn" disabled>Ended!</button>
         </div>
          <div class="arrow">↓</div>
@@ -118,7 +118,6 @@
             <a href="https://polygon.hackclub.com/"><button class="box-btn box-btn-white">check it out!</button></a>
             <a href="https://forms.hackclub.com/t/nGoLApvXMDus"><button class="box-btn box-btn-white">run a workshop!</button></a>
         </div>
-    </div>
     </div>
     <div class="fulfillment-section">
         <div class="unreleased-note">
