Add Boba Olympics

--- a/index.html
+++ b/index.html
@@ -118,6 +118,18 @@
             <a href="https://polygon.hackclub.com/"><button class="box-btn box-btn-white">check it out!</button></a>
             <a href="https://forms.hackclub.com/t/nGoLApvXMDus"><button class="box-btn box-btn-white">run a workshop!</button></a>
         </div>
+        <div class="arrow">↓</div>
+        <div class="flow-indicator">if you wanna work as a team, do...</div>
+        <div class="box" style="--box-bg: #f9e0bc; --box-title: #c2680e; --box-desc: #714312;">
+            <img class="box-img" src="./imgs/boba-olympics.svg" alt="Box Image" />
+            <div class="box-content">
+                <div class="box-title">Boba Olympics</div>
+                <div class="box-desc"><strong>Work as a team to build hand-made sites, win prizes!</strong></div>
+                <div class="box-desc">Estimated time: 2+</div>
+                <div class="price-tag">$?</div>
+            </div>
+            <a href="https://olympics.hackclub.com/"><button class="box-btn">check it out!</button></a>
+        </div>
     </div>
     <div class="fulfillment-section">
         <div class="unreleased-note">
