Update estimated time descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="box-content">
                 <div class="box-title">Boba Olympics</div>
                 <div class="box-desc"><strong>Work as a team to build hand-made sites, win prizes!</strong></div>
-                <div class="box-desc">Estimated time: 2+</div>
+                <div class="box-desc">Estimated time: 2+ hours</div>
                 <div class="price-tag">$?</div>
             </div>
             <a href="https://olympics.hackclub.com/"><button class="box-btn">check it out!</button></a>
@@ -137,7 +137,7 @@
             <div class="box-content">
                 <div class="box-title">Flavorless</div>
                 <div class="box-desc"><strong>Build a website using only HTML and Javascript! No <s>CSS</s> allowed!</strong></div>
-                <div class="box-desc">Estimated time: 1</div>
+                <div class="box-desc">Estimated time: 1 hour</div>
                 <div><strong>get a sticker sheet</strong></div>
             </div>
             <a href="https://flavorless.hackclub.com/?utm_source=webdev"><button>check it out!</button></a>
