Update event box styles and descriptions in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -92,44 +92,6 @@
             <a href="https://reactive.hackclub.dev"><button class="box-btn">check it out!</button></a>
             <a href="https://forms.hackclub.com/reactive-workshop"><button class="box-btn">run a workshop!</button></a>
         </div>
-         <div class="arrow">↓</div>
-        <div class="flow-indicator">why not take a trip to the zoo and learn SvelteKit, do...</div>
-        <div class="box unreleased-box" style="--box-bg: #103D10; --box-title: #408000; --box-desc: white;">
-            <img class="box-img unreleased" src="./imgs/zoo.png" alt="Zoo Logo">
-            <div class="box-content">
-                <div class="box-title">Zoo</div>
-                <div class="box-desc"><strong>Make an animal themed SvelteKit site, get plushies and stickers!</strong></div>
-                <div class="box-desc">Estimated time: 1-2 hours</div>
-                <div class="price-tag">$10+</div>
-            </div>
-            <button class="box-btn unreleased-btn" disabled>check it out!</button>
-            <button class="box-btn unreleased-btn" disabled>Ended!</button>
-        </div>
-         <div class="arrow">↓</div>
-        <div class="flow-indicator">if you want to go 3D, do...</div>
-        <div class="box unreleased-box" style="--box-bg: #c70014; --box-title: #ffffff; --box-desc: #ffffff;">
-            <img class="box-img unreleased" style="height: auto;" src="./imgs/polygon.png" alt="Box Image" />
-            <div class="box-content">
-                <div class="box-title">Polygon</div>
-                <div class="box-desc"><strong>Build a 3d website using three.js and get a grant to go watch your favourite movies!</strong></div>
-                <div class="box-desc">Estimated time: 1-4 hours</div>
-                <div class="price-tag">$10-20</div>
-            </div>
-            <a href="https://polygon.hackclub.com/"><button class="box-btn box-btn-white" disabled>check it out!</button></a>
-            <a href="https://forms.hackclub.com/t/nGoLApvXMDus"><button class="box-btn box-btn-white" disabled>run a workshop!</button></a>
-        </div>
-        <div class="arrow">↓</div>
-        <div class="flow-indicator">if you wanna work as a team, do...</div>
-        <div class="box" style="--box-bg: #f9e0bc; --box-title: #c2680e; --box-desc: #714312;">
-            <img class="box-img" src="./imgs/boba-olympics.svg" alt="Boba Olympics logo" />
-            <div class="box-content">
-                <div class="box-title">Boba Olympics</div>
-                <div class="box-desc"><strong>Work as a team to build hand-made sites, win prizes!</strong></div>
-                <div class="box-desc">Estimated time: 2+ hours</div>
-                <div class="price-tag">$?</div>
-            </div>
-            <a href="https://olympics.hackclub.com/"><button class="box-btn">check it out!</button></a>
-        </div>
         <div class="arrow">↓</div>
         <div class="flow-indicator">if you wanna go back to the basics, do...</div>
         <div class="box" style="--box-bg: #ffffff; --box-title: #000000; --box-desc: #000000;">
@@ -142,11 +104,48 @@
             </div>
             <a href="https://flavorless.hackclub.com/?utm_source=webdev"><button>check it out!</button></a>
         </div>
-    </div>
-    <div class="fulfillment-section">
-        <div class="unreleased-note">
-            <h2>Old Events!</h2>
-            <p><strong>Zoo and Polygon</strong> are currently not running. Stay tuned for updates about Zoo and Polygon V2.</p>
+        <div class="fulfillment-section">
+            <div class="ended-note">
+                <h2>Old Events!</h2>
+                <p><strong>Zoo, Boba Olympics and Polygon</strong> are currently not running. Stay tuned for updates about Zoo, Boba Olympics and Polygon V2.</p>
+            </div>
+        </div>
+         <div class="arrow">↓</div>
+        <div class="flow-indicator">why not take a trip to the zoo and learn SvelteKit, do...</div>
+        <div class="box ended-box" style="--box-bg: #103D10; --box-title: #408000; --box-desc: white;">
+            <img class="box-img ended" src="./imgs/zoo.png" alt="Zoo Logo">
+            <div class="box-content">
+                <div class="box-title">Zoo</div>
+                <div class="box-desc"><strong>Make an animal themed SvelteKit site, get plushies and stickers!</strong></div>
+                <div class="box-desc">Estimated time: 1-2 hours</div>
+                <div class="price-tag">$10+</div>
+            </div>
+            <a href="https://zoo.hackclub.com/"><button class="box-btn" disabled>check it out!</button></a>
+        </div>
+         <div class="arrow">↓</div>
+        <div class="flow-indicator">if you want to go 3D, do...</div>
+        <div class="box ended-box" style="--box-bg: #c70014; --box-title: #ffffff; --box-desc: #ffffff;">
+            <img class="box-img ended" style="height: auto;" src="./imgs/polygon.png" alt="Box Image" />
+            <div class="box-content">
+                <div class="box-title">Polygon</div>
+                <div class="box-desc"><strong>Build a 3d website using three.js and get a grant to go watch your favourite movies!</strong></div>
+                <div class="box-desc">Estimated time: 1-4 hours</div>
+                <div class="price-tag">$10-20</div>
+            </div>
+            <a href="https://polygon.hackclub.com/"><button class="box-btn box-btn-white" disabled>check it out!</button></a>
+            <a href="https://forms.hackclub.com/t/nGoLApvXMDus"><button class="box-btn box-btn-white" disabled>run a workshop!</button></a>
+        </div>
+        <div class="arrow">↓</div>
+        <div class="flow-indicator">if you wanna work as a team, do...</div>
+        <div class="box ended-box" style="--box-bg: #f9e0bc; --box-title: #c2680e; --box-desc: #714312;">
+            <img class="box-img ended" src="./imgs/boba-olympics.svg" alt="Boba Olympics logo" />
+            <div class="box-content">
+                <div class="box-title">Boba Olympics</div>
+                <div class="box-desc"><strong>Work as a team to build hand-made sites, win prizes!</strong></div>
+                <div class="box-desc">Estimated time: 2+ hours</div>
+                <div class="price-tag">$5-25</div>
+            </div>
+            <a href="https://olympics.hackclub.com/"><button class="box-btn" disabled>check it out!</button></a>
         </div>
     </div>
     <div class="fulfillment-section">
