Add workshop button!

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
                 <div><strong>get a sticker sheet</strong></div>
             </div>
             <a href="https://flavorless.hackclub.com/?utm_source=webdev"><button>check it out!</button></a>
+            <a href="https://forms.hackclub.com/flavorless-workshop"><button>run a workshop!</button></a>
+
         </div>
         <div class="fulfillment-section">
             <div class="ended-note">
