Add some CSS :sob:?

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 <div class="box-desc">Estimated time: 1 hour</div>
                 <div><strong>get a sticker sheet</strong></div>
             </div>
-            <a href="https://flavorless.hackclub.com/?utm_source=webdev"><button>check it out!</button></a>
-            <a href="https://forms.hackclub.com/flavorless-workshop"><button>run a workshop!</button></a>
+            <a href="https://flavorless.hackclub.com/?utm_source=webdev"><button class="box-btn-flavorless">check it out!</button></a>
+            <a href="https://forms.hackclub.com/flavorless-workshop"><button class="box-btn-flavorless">run a workshop!</button></a>
 
         </div>
         <div class="fulfillment-section">
