Reordering the YSWS!!!

--- a/index.html
+++ b/index.html
@@ -54,19 +54,6 @@
             <a href="https://forms.hackclub.com/toppings-workshop"><button class="box-btn">run a workshop!</button></a>
         </div>
         <div class="arrow">↓</div>
-        <div class="flow-indicator">and if you want to discover css frameworks, try doing...</div>
-        <div class="box" style="--box-bg: #c10007; --box-title: #ffdf20; --box-desc: white;">
-            <img class="box-img" src="./imgs/grub.png" alt="Box Image" />
-            <div class="box-content">
-                <div class="box-title">Grub</div>
-                <div class="box-desc"><strong>Build a website using the Tailwind CSS framework, and get free junk food!</strong></div>
-                <div class="box-desc">Estimated time: 1-2 hours</div>
-                <div class="price-tag">$6-10</div>
-            </div>
-            <a href="https://grub.hackclub.com"><button class="box-btn">check it out!</button></a>
-            <a href="https://forms.hackclub.com/grubworkshop"><button class="box-btn">run a workshop!</button></a>
-        </div>
-        <div class="arrow">↓</div>
         <div class="flow-indicator">if you wanna learn JavaScript, do...</div>
         <div class="box" style="--box-bg: #f8b84f; --box-title: #715547; --box-desc: #000;">
             <img class="box-img" src="./imgs/waffles.jpg" alt="Box Image" />
@@ -78,6 +65,32 @@
             </div>
             <a href="https://waffles.hackclub.com"><button class="box-btn">check it out!</button></a>
             <a href="https://forms.hackclub.com/waffles-workshop"><button class="box-btn">run a workshop!</button></a>
+        </div>
+        <div class="arrow">↓</div>
+        <div class="flow-indicator">if you want to focus on HTML & JS, do...</div>
+        <div class="box" style="--box-bg: #ffffff; --box-title: #000000; --box-desc: #000000;">
+            <img class="box-img" src="./imgs/flavorless.png" style="height: auto;" alt="Flavorless logo" />
+            <div class="box-content">
+                <div class="box-title">Flavorless</div>
+                <div class="box-desc"><strong>Build a website using only HTML and Javascript! No <s>CSS</s> allowed!</strong></div>
+                <div class="box-desc">Estimated time: 1 hour</div>
+                <div><strong>get a sticker sheet</strong></div>
+            </div>
+            <a href="https://flavorless.hackclub.com/?utm_source=webdev"><button class="box-btn-flavorless">check it out!</button></a>
+            <a href="https://forms.hackclub.com/flavorless-workshop"><button class="box-btn-flavorless">run a workshop!</button></a>
+        </div>
+        <div class="arrow">↓</div>
+        <div class="flow-indicator">and if you want to discover css frameworks, try doing...</div>
+        <div class="box" style="--box-bg: #c10007; --box-title: #ffdf20; --box-desc: white;">
+            <img class="box-img" src="./imgs/grub.png" alt="Box Image" />
+            <div class="box-content">
+                <div class="box-title">Grub</div>
+                <div class="box-desc"><strong>Build a website using the Tailwind CSS framework, and get free junk food!</strong></div>
+                <div class="box-desc">Estimated time: 1-2 hours</div>
+                <div class="price-tag">$6-10</div>
+            </div>
+            <a href="https://grub.hackclub.com"><button class="box-btn">check it out!</button></a>
+            <a href="https://forms.hackclub.com/grubworkshop"><button class="box-btn">run a workshop!</button></a>
         </div>
          <div class="arrow">↓</div>
         <div class="flow-indicator">if you wanna learn a modern web development framework, do...</div>
@@ -91,20 +104,6 @@
             </div>
             <a href="https://reactive.hackclub.dev"><button class="box-btn">check it out!</button></a>
             <a href="https://forms.hackclub.com/reactive-workshop"><button class="box-btn">run a workshop!</button></a>
-        </div>
-        <div class="arrow">↓</div>
-        <div class="flow-indicator">if you wanna go back to the basics, do...</div>
-        <div class="box" style="--box-bg: #ffffff; --box-title: #000000; --box-desc: #000000;">
-            <img class="box-img" src="./imgs/flavorless.png" style="height: auto;" alt="Flavorless logo" />
-            <div class="box-content">
-                <div class="box-title">Flavorless</div>
-                <div class="box-desc"><strong>Build a website using only HTML and Javascript! No <s>CSS</s> allowed!</strong></div>
-                <div class="box-desc">Estimated time: 1 hour</div>
-                <div><strong>get a sticker sheet</strong></div>
-            </div>
-            <a href="https://flavorless.hackclub.com/?utm_source=webdev"><button class="box-btn-flavorless">check it out!</button></a>
-            <a href="https://forms.hackclub.com/flavorless-workshop"><button class="box-btn-flavorless">run a workshop!</button></a>
-
         </div>
         <div class="fulfillment-section">
             <div class="ended-note">
