--- a/index.html
+++ b/index.html
@@ -54,20 +54,7 @@
             <a href="https://forms.hackclub.com/toppings-workshop"><button class="box-btn">run a workshop!</button></a>
         </div>
         <div class="arrow">↓</div>
-        <div class="flow-indicator">if you wanna learn JavaScript, do...</div>
-        <div class="box" style="--box-bg: #f8b84f; --box-title: #715547; --box-desc: #000;">
-            <img class="box-img" src="./imgs/waffles.jpg" alt="Box Image" />
-            <div class="box-content">
-                <div class="box-title">Waffles</div>
-                <div class="box-desc"><strong>Make a website that uses JavaScript, and get free waffles!</strong></div>
-                <div class="box-desc">Estimated time: 2 hours</div>
-                <div class="price-tag">$10</div>
-            </div>
-            <a href="https://waffles.hackclub.com"><button class="box-btn">check it out!</button></a>
-            <a href="https://forms.hackclub.com/waffles-workshop"><button class="box-btn">run a workshop!</button></a>
-        </div>
-        <div class="arrow">↓</div>
-        <div class="flow-indicator">if you want to focus on HTML & JS, do...</div>
+        <div class="flow-indicator">if you want to focus on HTML & start learing JS, do...</div>
         <div class="box" style="--box-bg: #ffffff; --box-title: #000000; --box-desc: #000000;">
             <img class="box-img" src="./imgs/flavorless.png" style="height: auto;" alt="Flavorless logo" />
             <div class="box-content">
@@ -78,6 +65,19 @@
             </div>
             <a href="https://flavorless.hackclub.com/?utm_source=webdev"><button class="box-btn-flavorless">check it out!</button></a>
             <a href="https://forms.hackclub.com/flavorless-workshop"><button class="box-btn-flavorless">run a workshop!</button></a>
+        </div>
+        <div class="arrow">↓</div>
+        <div class="flow-indicator">if you wanna learn JavaScript and strengthen your other skills, do...</div>
+        <div class="box" style="--box-bg: #f8b84f; --box-title: #715547; --box-desc: #000;">
+            <img class="box-img" src="./imgs/waffles.jpg" alt="Box Image" />
+            <div class="box-content">
+                <div class="box-title">Waffles</div>
+                <div class="box-desc"><strong>Make a website that uses JavaScript, and get free waffles!</strong></div>
+                <div class="box-desc">Estimated time: 2 hours</div>
+                <div class="price-tag">$10</div>
+            </div>
+            <a href="https://waffles.hackclub.com"><button class="box-btn">check it out!</button></a>
+            <a href="https://forms.hackclub.com/waffles-workshop"><button class="box-btn">run a workshop!</button></a>
         </div>
         <div class="arrow">↓</div>
         <div class="flow-indicator">and if you want to discover css frameworks, try doing...</div>
