Add club levels section to workshop information

--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
             </div>
             <h3>Running a workshop?</h3>
             <p>Want to run a workshop and get the We Ships that same day? Hack yeah! Just send a message in #leaders and we will help you!</p>
+            <h3>Club Levels</h3>
+            <p>All of these Workshops can help your club level up, see <a href="https://leaders.hackclub.com/my-club">the club leaders portal</a> for more information.</p>
         </div>
     </div>
-    
     <footer class="footer">
         <p>Made with a whole bunch of Boba, Creemees with sprinkles, Hamburgers, Waffles, Popcorn and <i>a little more boba</i> by <a href="https://hackclub.com">Hack Club</a></p>
     </footer>
